<resources>
    <string name="app_name">DemonetikTPE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tpe">TPEActivity</string>
    <string name="title_activity_pin">PINActivity</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="title_activity_recapitulatif">Recapitulatif de la transaction</string>

    <!-- NFC -->
    <string name="btRead">Lire l\'applet de test</string>
    <string name="nfc_unavailable">Pas de NFC disponible</string>
    <string name="nfc_not_activated">Il faut activer le NFC</string>
    <string name="non_iso">La carte n\'est pas ISO14443</string>
    <string name="iso_connect_error">Impossible de se connecter à la carte ISO14443</string>
    <string name="iso_read_error">Erreur de lecture carte ISO14443</string>
    <string name="txtId">Card ID</string>
    <string name="txtNomPorteur">Nom Porteur</string>
    <string name="txtNumCarte">Numero Carte</string>
    <string name="txtMontant">Montant transaction</string>
    <string name="txtPIN">Code PIN</string>
    <string name="txtIncrement">Increment Response</string>
    <string name="txtResTransaction">Résultat de la transaction</string>

    <!--Valeurs PIN-->
    <string name="entrer_pin">Entrez le code PIN</string>
    <string name="entrer_montant">Entrez le montant</string>
    <string name="attente_demande_auto">En attente de l\'autorisation</string>

    <!--Récapitulatif-->
    <string name="nouvelle_transaction">Nouvelle transaction</string>

    <!-- Paramètres -->
    <string name="preference_webservice">Adresse WebService</string>
    <string name="preference_webservice_default_ip">localhost</string>
    <string name="preference_webservice_default_port">8080</string>
    <string name="preference_webservice_default_path">DemonetikWebService/demonetik/transaction/</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_webservice">Connexion au WebService</string>



    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
</resources>
